ops/deployment/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: rabbitmq-ingress
    namespace: rabbitmq
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:006764518182:certificate/6adbd911-2b9d-4de9-ab88-5c7e41a2e3e2
        alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
        alb.ingress.kubernetes.io/success-codes: "200,404"
        alb.ingress.kubernetes.io/target-type: ip
    labels:
        app: rabbitmq
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: ssl-redirect
                        servicePort: use-annotation
        - host: rabbitmq-management.mtmostaging.com
          http:
              paths:
                  - path: /*
                    backend:
                        serviceName: rabbitmq
                        servicePort: 15672
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: redis-commander-ingress
    namespace: redis
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:006764518182:certificate/1df10d51-8266-49e7-8b56-149363fc47d5
        alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
        alb.ingress.kubernetes.io/success-codes: "200,404"
    labels:
        app: redis-commander
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: ssl-redirect
                        servicePort: use-annotation
        - host: redis-commander.mtmostaging.com
          http:
              paths:
                  - path: /*
                    backend:
                        serviceName: redis-commander
                        servicePort: 8081
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: pgadmin-ingress
    namespace: pgadmin
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/certificate-arn: 	arn:aws:acm:ap-southeast-2:006764518182:certificate/34d50f6a-3cbc-4755-b648-a3d4c1212768
        alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
        alb.ingress.kubernetes.io/success-codes: "200,404"
        alb.ingress.kubernetes.io/target-type: ip
    labels:
        app: pgadmin
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: ssl-redirect
                        servicePort: use-annotation
        - host: pgadmin.mtmostaging.com
          http:
              paths:
                  - path: /*
                    backend:
                        serviceName: pgadmin-pgadmin4
                        servicePort: 80
